@@ -1,5 +1,9 @@
 2001-10-18  Kevin Vandersloot <kfv101@psu.edu>
 
+	* procactions.c: add support for renicing multiple processes
+
+2001-10-18  Kevin Vandersloot <kfv101@psu.edu>
+
 	Add ability to select multiple processes and do the corresponding
 	actions on all selected processes. Crashes when killing multiple
 	processes and one needs the root dialog though and no renice
